Fix Amplify deployment: Use standard Next.js build instead of standalone

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run build:amplify
+        - npm run build
   artifacts:
     baseDirectory: .
     files:
@@ -15,7 +15,6 @@ frontend:
       - package.json
       - next.config.js
       - node_modules/**/*
-      - required-server-files.json
   cache:
     paths:
       - node_modules/**/*
