--- a/amplify.yml
+++ b/amplify.yml
@@ -3,11 +3,11 @@ frontend:
   phases:
     preBuild:
       commands:
+        - nvm use 20
         - npm ci
     build:
       commands:
         - npm run build
-        - cp .next/required-server-files.json ./
   artifacts:
     baseDirectory: .
     files:
