--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,9 @@ frontend:
   phases:
     preBuild:
       commands:
-        - nvm use 20
+        - nvm use 18
+        - node --version
+        - npm --version
         - npm ci
     build:
       commands:
