Fix Amplify: Upgrade to Node.js 20 and copy trace file to root

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - nvm use 18
+        - nvm use 20
         - node --version
         - npm --version
         - npm ci
@@ -12,7 +12,9 @@ frontend:
         - npm run build
         - ls -la .next/
         - cp .next/required-server-files.json ./
+        - cp .next/trace ./
         - ls -la required-server-files.json
+        - ls -la trace
   artifacts:
     baseDirectory: .
     files:
@@ -22,6 +24,7 @@ frontend:
       - next.config.js
       - node_modules/**/*
       - required-server-files.json
+      - trace
   cache:
     paths:
       - node_modules/**/*
