--- a/amplify.yml
+++ b/amplify.yml
@@ -10,11 +10,10 @@ frontend:
     build:
       commands:
         - npm run build
-        - ls -la .next/
-        - ls -la .next/required-server-files.json
-        - ls -la .next/trace
+        - ls -la .next/standalone/
+        - ls -la .next/standalone/.next/
   artifacts:
-    baseDirectory: .
+    baseDirectory: .next/standalone
     files:
       - .next/**/*
       - public/**/*
