--- a/amplify.yml
+++ b/amplify.yml
@@ -4,15 +4,14 @@ frontend:
     preBuild:
       commands:
         - nvm use 20
-        - node --version
-        - npm --version
         - npm ci
     build:
       commands:
         - npm run build
-        # Move required-server-files.json up one level so Amplify can find it
+        # Move required files to artifact root
         - cp .next/standalone/.next/required-server-files.json .next/standalone/
-        - ls -la .next/standalone/
+        - cp .next/standalone/.next/trace .next/standalone/ || true
+        - ls -la .next/standalone
   artifacts:
     baseDirectory: .next/standalone
     files:
