Fix Amplify: Use absolute path /amplify-build in artifacts section

--- a/amplify.yml
+++ b/amplify.yml
@@ -15,7 +15,7 @@ frontend:
         - cp -r .next/trace amplify-build/ || true
         - ls -la amplify-build
   artifacts:
-    baseDirectory: amplify-build
+    baseDirectory: /amplify-build
     files:
       - '**/*'
   cache:
